tutorial_ai/02_openshift_ai/level_2/M3_agent_deployment/2_langchain_langgraph/manifests/agent-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: langgraph-agent
  labels:
    app: langgraph-agent
    tutorial-level: "2"
    tutorial-module: "M3"
spec:
  to:
    kind: Service
    name: langgraph-agent
  port:
    targetPort: 8080
  tls:
    termination: edge
